--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -3,14 +3,19 @@
 spring.datasource.url=jdbc:postgresql://localhost:5440/db_movieflix
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.open-in-view=false
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=none
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 # spring.flyway.enabled = false
 
 # spring.flyway.url=jdbc:postgresql://localhost:5440/db_movieflix
 # spring.flyway.user=postgres
 # spring.flyway.password=postgres
+# spring.flyway.driver-class-name=org.postgresql.Driver
